syntax = "proto3";

package dispatcherRole;

// "directory/;package_name"
option go_package = "/;dispatcherRole";

service DispatcherRoleService {
  rpc Add (AddRequest) returns (UUID);
  rpc Update (UpdateRequest) returns (Empty);
  rpc Remove (RemoveRequest) returns (Empty);
}

message AddRequest {
  string name = 1;
  string scopes = 3;
}

message UpdateRequest {
  string role_id = 1;
  string name = 2;
  string scopes = 3;
}

message RemoveRequest {
  string role_id = 1;
}

// Responses
message UUID {
  string value = 1;
}

message Empty {
}
